# base-farming-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: agent.py  base_client.py  config.py  main.py  pyproject.toml  risk.py  scheduler.py  state.py
backend/strategies/: activity_scheduler.py  bridge_activity.py  defi_rotation.py  nft_minter.py  nft_minting.py
backend/tests/: test_bot.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
